--- a/style.css
+++ b/style.css
@@ -1,41 +1,46 @@
 :root{
     --btn-light-color: #dee0ee;
     --btn-dark-color: #8991a6;
+    --container-color: #1a1b1e;
 }
 
 body{
     display: flex;
+    background-color: #121216;
+}
+
+body > *{
+    margin: 0 10px;
 }
 
 .toolbox{
     display: flex;
     flex-direction: column;
     font-size: 0;
+    box-shadow: 0 0 10px #000;
+    background-color: var(--container-color);
+}
+
+canvas{
+    box-shadow: 0 0 10px #000;
+    background-color: var(--container-color);
 }
 
 .toolbox > .item{
-    border-style: solid;
-    border-left-width: 2px;
-    border-top-width: 2px;
-    border-right-width: 4px;
-    border-bottom-width: 4px;
-    border-left-color: var(--btn-light-color);
-    border-top-color: var(--btn-light-color);
-    border-right-color: var(--btn-dark-color);
-    border-bottom-color: var(--btn-dark-color);
-    padding: 2px;
-    background-color: #9498b6;
+    padding: 4px;
     cursor: pointer;
-    margin-bottom: 2px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: transparent;
+    transition: background-color .25s, border-color .25s;
 }
 
+.toolbox > .item > img{
+    border: 1px solid #000;
+}
+
+.toolbox > .item:hover,
 .toolbox > .item.active{
-    border-top-width: 4px;
-    border-left-width: 4px;
-    border-right-width: 2px;
-    border-bottom-width: 2px;
-    border-left-color: var(--btn-dark-color);
-    border-top-color: var(--btn-dark-color);
-    border-right-color: var(--btn-light-color);
-    border-bottom-color: var(--btn-light-color);
+    background-color: rgb(0 124 255 / 23%);
+    border-color: #008cff;
 }
