--- a/style.css
+++ b/style.css
@@ -44,3 +44,30 @@ canvas{
     background-color: rgb(0 124 255 / 23%);
     border-color: #008cff;
 }
+
+.floor{
+    position: absolute;
+    width: 200%;
+    left: -50%;
+    height: 70%;
+    bottom: 00px;
+    z-index:-1;
+    transform: perspective(300px) rotateX(60deg); 
+}
+
+.floor:after{
+    display: block;
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(180deg, rgba(0,0,0,0.5074404761904762) 0%, rgba(0,0,0,0) 100%);
+}
+
+.wrapper{
+    position: relative;
+    overflow: hidden;
+}
+
+.wrapper > canvas{
+    background: transparent;
+}
