--- a/style.css
+++ b/style.css
@@ -50,9 +50,9 @@ canvas{
     width: 200%;
     left: -50%;
     height: 70%;
-    bottom: 00px;
+    bottom: 10px;
     z-index:-1;
-    transform: perspective(300px) rotateX(60deg); 
+    transform: perspective(100px) rotateX(45deg); 
 }
 
 .floor:after{
@@ -60,7 +60,7 @@ canvas{
     content: "";
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, rgba(0,0,0,0.5074404761904762) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(180deg, rgba(0,0,0,0.5) 0%, rgba(0,0,0,0) 100%);
 }
 
 .wrapper{
