--- a/renderer/style.css
+++ b/renderer/style.css
@@ -2,27 +2,34 @@
     --btn-light-color: #dee0ee;
     --btn-dark-color: #8991a6;
     --container-color: #1a1b1e;
+    --border-color: #008cff;
 }
 
 body{
     display: flex;
     background-color: #121216;
+    padding: 0;
+    margin: 0;
+    flex-direction: column;
+    height: calc(100vh - 2px);
+    overflow: hidden;
+    border: 1px solid var(--border-color);
 }
 
 body > *{
-    margin: 0 10px;
+    flex: 1;
 }
 
 .toolbox{
     display: flex;
     flex-direction: column;
     font-size: 0;
-    box-shadow: 0 0 10px #000;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
     background-color: var(--container-color);
 }
 
 canvas{
-    box-shadow: 0 0 10px #000;
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
     background-color: var(--container-color);
 }
 
@@ -42,7 +49,7 @@ canvas{
 .toolbox > .item:hover,
 .toolbox > .item.active{
     background-color: rgb(0 124 255 / 23%);
-    border-color: #008cff;
+    border-color: var(--border-color);
 }
 
 .floor{
@@ -70,4 +77,58 @@ canvas{
 
 .wrapper > canvas{
     background: transparent;
+}
+
+#title-bar{
+    display: flex;
+    background-color: var(--container-color);
+    box-shadow: 2px 2px 5px rgb(0 0 0 / 20%);
+    align-items: center;
+    justify-content:flex-end;
+    padding-top:1px;
+    padding-bottom:1px;
+    border-bottom: 1px solid var(--border-color);
+}
+
+#title-bar > .draggable{
+    flex: 1;
+    height: 100%;
+    -webkit-app-region: drag;
+}
+
+#title-bar > .btns{
+    display: flex;
+    color: #fff;
+    width: 80px;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    height: 100%;
+}
+
+#title-bar > .btns > .btn{
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    text-align: center;
+    height: 100%;
+    font-size: 18px;
+    cursor: pointer;
+    border: 1px solid transparent;
+    transition: border-color .25s, background-color .25s;
+}
+
+#title-bar > .btns > .btn:hover{
+    background-color: rgb(0 124 255 / 23%);
+    border-color: var(--border-color);
+}
+
+#page{
+    display: flex;
+    justify-content: space-evenly;
+    padding: 0;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
